# ralph-rust-cli

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.beads/: issues.jsonl
.github/workflows/: release.yml
scripts/: build-release.sh  ralph-loop.sh  ralph-once.sh
src/: main.rs  upgrade.rs
tasks/: prd.md  tdd-upgrade-and-distribution.md
