[package]
name = "ralph"
version = "0.1.0"
edition = "2024"
description = "A Rust CLI dispatcher for AI provider agents (droid, codex, claude, gemini)"
authors = ["Lyon Liang"]
license = "MIT"
repository = "https://github.com/lyonbot/ralph-cli"

[[bin]]
name = "ralph"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
